--- a/src/app/Cpmponents/your-properties/your-properties.component.html
+++ b/src/app/Cpmponents/your-properties/your-properties.component.html
@@ -12,13 +12,14 @@
       </li>
     </ul>
   </div>
-  <button
+  <a routerLink="/add-apartment">
+    <button
     type="button"
     class="btn btn-outline-danger btn-lg"
     style="margin-left: 400px"
-  >
-    Continue Advertisment
+  > Continue Advertisment
   </button>
+  </a>
 </div>
 <br><br><br>
 <div class="container">
